# src/v2/back/InSeconds.Api/Internal/Generated/WolverineHandlers/GET_api_admin_jobs_last_runs.cs
@@ -1,0 +1,43 @@
+// <auto-generated/>
+#pragma warning disable
+using Hangfire;
+using Microsoft.AspNetCore.Routing;
+using System;
+using System.Linq;
+using Wolverine.Http;
+
+namespace Internal.Generated.WolverineHandlers
+{
+    // START: GET_api_admin_jobs_last_runs
+    [global::System.CodeDom.Compiler.GeneratedCode("JasperFx", "1.0.0")]
+    public sealed class GET_api_admin_jobs_last_runs : Wolverine.Http.HttpHandler
+    {
+        private readonly Wolverine.Http.WolverineHttpOptions _wolverineHttpOptions;
+        private readonly Hangfire.JobStorage _jobStorage;
+
+        public GET_api_admin_jobs_last_runs(Wolverine.Http.WolverineHttpOptions wolverineHttpOptions, Hangfire.JobStorage jobStorage) : base(wolverineHttpOptions)
+        {
+            _wolverineHttpOptions = wolverineHttpOptions;
+            _jobStorage = jobStorage;
+        }
+
+
+
+        public override async System.Threading.Tasks.Task Handle(Microsoft.AspNetCore.Http.HttpContext httpContext)
+        {
+            System.Diagnostics.Activity.Current?.SetTag("handler.type", "InSeconds.Api.Infrastructure.Jobs.GetJobLastRunsEndpoint");
+            
+            // The actual HTTP request handler execution
+            var jobLastRunArray_response = InSeconds.Api.Infrastructure.Jobs.GetJobLastRunsEndpoint.Get(_jobStorage);
+
+            // Writing the response body to JSON because this was the first 'return variable' in the method signature
+            await WriteJsonAsync(httpContext, jobLastRunArray_response, 404);
+        }
+
+    }
+
+    // END: GET_api_admin_jobs_last_runs
+    
+    
+}
+
