# src/v2/back/InSeconds.Api/Internal/Generated/WolverineHandlers/POST_api_admin_daily_challenges_generate_today.cs
@@ -1,45 +1,0 @@
-// <auto-generated/>
-#pragma warning disable
-using InSeconds.Api.Infrastructure.Jobs;
-using Microsoft.AspNetCore.Routing;
-using System;
-using System.Linq;
-using Wolverine.Http;
-
-namespace Internal.Generated.WolverineHandlers
-{
-    // START: POST_api_admin_daily_challenges_generate_today
-    [global::System.CodeDom.Compiler.GeneratedCode("JasperFx", "1.0.0")]
-    public sealed class POST_api_admin_daily_challenges_generate_today : Wolverine.Http.HttpHandler
-    {
-        private readonly Wolverine.Http.WolverineHttpOptions _wolverineHttpOptions;
-        private readonly InSeconds.Api.Infrastructure.Jobs.IJobTrigger _jobTrigger;
-
-        public POST_api_admin_daily_challenges_generate_today(Wolverine.Http.WolverineHttpOptions wolverineHttpOptions, InSeconds.Api.Infrastructure.Jobs.IJobTrigger jobTrigger) : base(wolverineHttpOptions)
-        {
-            _wolverineHttpOptions = wolverineHttpOptions;
-            _jobTrigger = jobTrigger;
-        }
-
-
-
-        public override async System.Threading.Tasks.Task Handle(Microsoft.AspNetCore.Http.HttpContext httpContext)
-        {
-            System.Diagnostics.Activity.Current?.SetTag("handler.type", "InSeconds.Api.Modules.Daily.Application.GenerateDailyChallengeEndpoint");
-            
-            // The actual HTTP request handler execution
-            var jobExecutionResponse_response = await InSeconds.Api.Modules.Daily.Application.GenerateDailyChallengeEndpoint.Post(_jobTrigger, httpContext.RequestAborted).ConfigureAwait(false);
-
-            // This response type customizes the HTTP response
-            ApplyHttpAware(jobExecutionResponse_response, httpContext);
-            // Writing the response body to JSON because this was the first 'return variable' in the method signature
-            await WriteJsonAsync(httpContext, jobExecutionResponse_response, 404);
-        }
-
-    }
-
-    // END: POST_api_admin_daily_challenges_generate_today
-    
-    
-}
-
